tests/NormalTests/paczka1/fuzzy1/76736918.err
Error in line 1: S389 S965 79,9
Error in line 2: wWnifEM8GJ S389 61,4
Error in line 13: q0X S389 10,8
Error in line 4: S389 S389 69,8
Error in line 18: 44H4Q A234 42,7
Error in line 22: 44H4Q S389 13,0
Error in line 28: q0X S389 93,1
